--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CIElid_Check">
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".AddRoomActivity"></activity>
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".AddEventActivity" />
         <activity android:name=".OptionsActivity" />
         <activity android:name=".RegisterActivity" />
