--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CIElid_Check">
-        <activity android:name=".RoomWeekActivity"></activity>
+        <activity android:name=".AddScheduleActivity"></activity>
+        <activity android:name=".SelectedWeekActivity" />
+        <activity android:name=".RoomWeekActivity" />
         <activity android:name=".AddRoomActivity" />
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".AddEventActivity" />
